--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <meta name="keywords" content="html, css , javascript">
 <meta name="author" content="Никита Новицкий">
   <link rel="stylesheet" href="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="C:\Users\79885\dev\first-project">
+  <link rel="stylesheet" href="style.css">
   <title>Портфолио</title>
 </head>
 </body>
+<h1> Ну привет  </h1>
 <body>
