--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 <meta name="keywords" content="html, css , javascript">
 <meta name="author" content="Никита Новицкий">
   <link rel="stylesheet" href="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Портфолио</title>
 </head>
 </body>
 <h1> Ну привет  </h1>
+<h2> Я МОЛОДЕЦ </h2>
 <body>
